// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationStatusTags component renders when all locations are down 1`] = `
.c3 {
  display: inline-block;
  margin-left: 4px;
}

.c2 {
  font-weight: 600;
}

.c1 {
  margin-bottom: 5px;
}

.c0 {
  padding: 10px;
  max-height: 229px;
  overflow: hidden;
}

<div
  class="c0"
>
  <span>
    <div
      class="c1"
    >
      <span
        class="euiBadge euiBadge--iconLeft"
        style="background-color:#bd271e;color:#FFFFFF"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            <div
              class="euiText euiText--medium"
            >
              <div
                class="c2"
              >
                Islamabad
              </div>
            </div>
          </span>
        </span>
      </span>
      <span
        class="c3"
      >
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextColor euiTextColor--subdued"
          >
            in 5s
          </div>
        </div>
      </span>
    </div>
    <div
      class="c1"
    >
      <span
        class="euiBadge euiBadge--iconLeft"
        style="background-color:#bd271e;color:#FFFFFF"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            <div
              class="euiText euiText--medium"
            >
              <div
                class="c2"
              >
                Berlin
              </div>
            </div>
          </span>
        </span>
      </span>
      <span
        class="c3"
      >
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextColor euiTextColor--subdued"
          >
            in 5m
          </div>
        </div>
      </span>
    </div>
  </span>
  <span />
</div>
`;

exports[`LocationStatusTags component renders when all locations are up 1`] = `
.c3 {
  display: inline-block;
  margin-left: 4px;
}

.c2 {
  font-weight: 600;
}

.c1 {
  margin-bottom: 5px;
}

.c0 {
  padding: 10px;
  max-height: 229px;
  overflow: hidden;
}

<div
  class="c0"
>
  <span />
  <span>
    <div
      class="c1"
    >
      <span
        class="euiBadge euiBadge--iconLeft"
        style="background-color:#d3dae6;color:#000000"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            <div
              class="euiText euiText--medium"
            >
              <div
                class="c2"
              >
                Berlin
              </div>
            </div>
          </span>
        </span>
      </span>
      <span
        class="c3"
      >
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextColor euiTextColor--subdued"
          >
            in 5d
          </div>
        </div>
      </span>
    </div>
    <div
      class="c1"
    >
      <span
        class="euiBadge euiBadge--iconLeft"
        style="background-color:#d3dae6;color:#000000"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            <div
              class="euiText euiText--medium"
            >
              <div
                class="c2"
              >
                Islamabad
              </div>
            </div>
          </span>
        </span>
      </span>
      <span
        class="c3"
      >
        <div
          class="euiText euiText--medium"
        >
          <div
            class="euiTextColor euiTextColor--subdued"
          >
            in 5s
          </div>
        </div>
      </span>
    </div>
  </span>
</div>
`;

exports[`LocationStatusTags component renders when there are many location 1`] = `
Array [
  .c3 {
  display: inline-block;
  margin-left: 4px;
}

.c2 {
  font-weight: 600;
}

.c1 {
  margin-bottom: 5px;
}

.c0 {
  padding: 10px;
  max-height: 229px;
  overflow: hidden;
}

<div
    class="c0"
  >
    <span>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#FFFFFF"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Islamabad
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              in 5s
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#FFFFFF"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Berlin
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              in 5m
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#FFFFFF"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  st-paul
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              in 5h
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#FFFFFF"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Tokyo
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              in 5d
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#FFFFFF"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  New York
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              in 1 Mon
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#FFFFFF"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Toronto
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              in 5 Mon
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#FFFFFF"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Sydney
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              in 5 Yr
            </div>
          </div>
        </span>
      </div>
      <div
        class="c1"
      >
        <span
          class="euiBadge euiBadge--iconLeft"
          style="background-color:#bd271e;color:#FFFFFF"
        >
          <span
            class="euiBadge__content"
          >
            <span
              class="euiBadge__text"
            >
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="c2"
                >
                  Paris
                </div>
              </div>
            </span>
          </span>
        </span>
        <span
          class="c3"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              in 5 Yr
            </div>
          </div>
        </span>
      </div>
    </span>
    <span />
  </div>,
  .c0 {
  padding-left: 18px;
}

<div
    class="c0"
  >
    <div
      class="euiText euiText--medium"
    >
      <div
        class="euiTextColor euiTextColor--subdued"
      >
        <h4>
          1 Others ...
        </h4>
      </div>
    </div>
  </div>,
]
`;
